frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: guestbook
    tier: frontend
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  type: NodePort
#  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: guestbook
    tier: frontend
